set specific parent settings